Updated proxy server to reference deployed components rather than production components

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,15 @@
       <div id="detailsAndResContainer">
         <div id="details">product details test</div>
         <div id="reservations">reservations test</div>
-      </div>    
+      </div>     
       <div id="review">review test</div>
       <div id="similarlistings">similar listings test</div>
 
     </div>
 
-    <script src="http://localhost:3001/public/main.js"></script>
-    <script src="http://localhost:3002/bundle.js"></script>
-    <script src="http://localhost:3003/dist/bundle.js"></script>
-    <script src="http://localhost:3004/bundle.js"></script>
+    <script src="http://ec2-18-217-72-127.us-east-2.compute.amazonaws.com/public/bundle.js"></script>
+    <script src="http://ec2-13-57-253-115.us-west-1.compute.amazonaws.com/dist/bundle.js"></script>
+    <script src="http://ec2-52-36-106-173.us-west-2.compute.amazonaws.com/dist/bundle.js"></script>
+    <script src="http://ec2-18-188-208-82.us-east-2.compute.amazonaws.com/public/main.js"></script>
   </body>
 </html>
