Updated my proxy server to serve files from S3 rather than ec2

--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,13 @@
 
     </div>
 
-    <script src="http://ec2-18-217-72-127.us-east-2.compute.amazonaws.com/public/bundle.js"></script>
-    <script src="http://ec2-13-57-253-115.us-west-1.compute.amazonaws.com/dist/bundle.js"></script>
-    <script src="http://ec2-52-36-106-173.us-west-2.compute.amazonaws.com/dist/bundle.js"></script>
-    <script src="http://ec2-18-188-208-82.us-east-2.compute.amazonaws.com/public/main.js"></script>
+    <!-- Reviews by Priya -->
+    <script src="https://s3-us-west-1.amazonaws.com/interstellarreviews/bundle.js"></script>
+    <!-- Details by Jake -->
+    <script src="https://s3-us-west-1.amazonaws.com/listing-details-bundle/bundle.js"></script>
+    <!-- Reservations by Henry -->
+    <script src="https://s3-us-west-2.amazonaws.com/interstellarbnb-reservations/bundle.js"></script>
+    <!-- Similar Listings by Evelyn -->
+    <script src="https://s3-us-west-1.amazonaws.com/similarlistings/main.js"></script>
   </body>
 </html>
